@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-06T08:14:12Z",
+  "timestamp" : "2022-06-07T00:51:08Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 346,
+  "count" : 347,
   "uniques" : 187,
   "clones" : [
     {
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-06-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
