@@ -1,5 +1,5 @@
 {
-  "count": 18,
+  "count": 19,
   "uniques": 4,
   "clones": [
     {
@@ -44,7 +44,7 @@
     },
     {
       "timestamp": "2022-06-06T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
